# file

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: apprentice.c  apptype.c  ascmagic.c  asctime_r.c  asprintf.c  buffer.c  cdf.c  cdf.h  cdf_time.c  compress.c  ctime_r.c  der.c  elfclass.h  encoding.c  file.c  file.h  file_opts.h  fmtcheck.c  fsmagic.c  funcs.c  getline.c  getopt_long.c  gmtime_r.c  is_csv.c  is_json.c  is_simh.c  is_tar.c  localtime_r.c  magic.c  mygetopt.h  pread.c  print.c  readcdf.c  readelf.c  readelf.h  softmagic.c  strcasestr.c  strlcat.c  strlcpy.c  swap.c  (+3 more)
win/: README.md  config.h  dirent.h  magic.h  port.h  regex.h  symlink.c  symlink.h  unistd.h
win/sys/: param.h
